--- a/pages/playingWithComp.html
+++ b/pages/playingWithComp.html
@@ -91,31 +91,31 @@
               <div class="tic-tac-toe-wrapper">
                 <div class="tic-tac-toe">
                   <div class="tic-tac-toe-item">
-                    <img src="../images/O.svg" alt="Img" />
+                    <!-- <img src="../images/O.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/X.svg" alt="Img" />
+                    <!-- <img src="../images/X.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/O.svg" alt="Img" />
+                    <!-- <img src="../images/O.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/X.svg" alt="Img" />
+                    <!-- <img src="../images/X.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/O.svg" alt="Img" />
+                    <!-- <img src="../images/O.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/X.svg" alt="Img" />
+                    <!-- <img src="../images/X.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/O.svg" alt="Img" />
+                    <!-- <img src="../images/O.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/X.svg" alt="Img" />
+                    <!-- <img src="../images/X.svg" alt="Img" /> -->
                   </div>
                   <div class="tic-tac-toe-item">
-                    <img src="../images/O.svg" alt="Img" />
+                    <!-- <img src="../images/O.svg" alt="Img" /> -->
                   </div>
                 </div>
               </div>
