Almost done 'Playing with Compyuter'

--- a/pages/playingWithComp.html
+++ b/pages/playingWithComp.html
@@ -41,7 +41,7 @@
           </div>
           <div class="battery__wrapper">
             <div class="battery__content position-relative">
-              <span class="battery__percentage align-middle m-auto">100</span>
+              <span class="battery__percentage align-middle m-auto"></span>
             </div>
           </div>
         </div>
