--- a/index.html
+++ b/index.html
@@ -1,117 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe By Abdurahmon</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Londrina+Sketch&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./styles/connections.css" />
-  </head>
-  <body>
-    <div class="header">
-      <div class="header__wrapper">
-        <div
-          class="header__top d-flex justify-content-between align-items-center"
-        >
-          <div class="header__top-time">
-            <span class="hours">9</span> <span class="align-middle">:</span>
-            <span class="minutes">41</span>
-          </div>
-          <div class="header__top-connections d-flex align-items-center gap-1">
-            <div class="header__top-internet-connection d-flex">
-              <div class="connection line mt-auto line1"></div>
-              <div class="connection line mt-auto line2"></div>
-              <div class="connection line mt-auto line3"></div>
-              <div class="connection line mt-auto line4"></div>
-            </div>
-            <div
-              class="header__top-wifi-wrapper position-relative w-100 h-100 z-3 ms-2"
-            >
-              <div class="header__top-wifi">
-                <i class="bi bi-wifi"></i>
-              </div>
-              <div class="through-wifi"></div>
-            </div>
-            <div class="battery__wrapper">
-              <div class="battery__content position-relative">
-                <span class="battery__percentage align-middle m-auto">100</span>
-              </div>
-            </div>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tic Tac Toe By Abdurahmon</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Londrina+Sketch&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./styles/connections.css" />
+</head>
+
+<body>
+  <div class="header">
+    <div class="header__wrapper">
+      <div class="header__top d-flex justify-content-between align-items-center">
+        <div class="header__top-time">
+          <span class="hours">9</span> <span class="align-middle">:</span>
+          <span class="minutes">41</span>
         </div>
-        <div class="header__body position-relative">
-          <div class="header__body-links position-absolute top-0 start-0">
-            <div class="header__body-link">
-              <i class="bi bi-stack"></i>
+        <div class="header__top-connections d-flex align-items-center gap-1">
+          <div class="header__top-internet-connection d-flex">
+            <div class="connection line mt-auto line1"></div>
+            <div class="connection line mt-auto line2"></div>
+            <div class="connection line mt-auto line3"></div>
+            <div class="connection line mt-auto line4"></div>
+          </div>
+          <div class="header__top-wifi-wrapper position-relative w-100 h-100 z-3 ms-2">
+            <div class="header__top-wifi">
+              <i class="bi bi-wifi"></i>
             </div>
-            <div class="header__body-link2">
-              <i class="bi bi-info"></i>
+            <div class="through-wifi"></div>
+          </div>
+          <div class="battery__wrapper">
+            <div class="battery__content position-relative">
+              <span class="battery__percentage align-middle m-auto"></span>
             </div>
           </div>
-          <div class="header__body-content">
-            <div
-              class="d-flex justify-content-center flex-column align-items-center gap-5"
-            >
-              <div class="header__body-content-img">
-                <img
-                  class="header__body-first-img"
-                  src="./images/tic.svg"
-                  alt=""
-                />
-              </div>
-              <div class="header__body-content-img">
-                <img src="./images/tac.svg" alt="" />
-              </div>
-              <div class="header__body-content-img">
-                <img src="./images/toe.svg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="header__footer">
-          <h5 class="header__footer-title">Select Mode</h5>
-          <div class="header__footer-btns">
-            <div class="header__footer-btn">
-              <button
-                class="custom-btn"
-                type="button"
-                onclick="showSinglePlayer()"
-              >
-                Single Player
-              </button>
-            </div>
-            <div class="header__footer-btn">
-              <button class="custom-btn" type="button">
-                Play With A Friend
-              </button>
-            </div>
-          </div>
-          <a
-            class="text-decoration-none text-black"
-            href="https://t.me/abdurhamonMirmaxsudov"
-            >By Abdurahmon</a
-          >
         </div>
       </div>
+      <div class="header__body position-relative">
+        <div class="header__body-links position-absolute top-0 start-0">
+          <div class="header__body-link">
+            <i class="bi bi-stack"></i>
+          </div>
+          <div class="header__body-link2">
+            <i class="bi bi-info"></i>
+          </div>
+        </div>
+        <div class="header__body-content">
+          <div class="d-flex justify-content-center flex-column align-items-center gap-5">
+            <div class="header__body-content-img">
+              <img class="header__body-first-img" src="./images/tic.svg" alt="" />
+            </div>
+            <div class="header__body-content-img">
+              <img src="./images/tac.svg" alt="" />
+            </div>
+            <div class="header__body-content-img">
+              <img src="./images/toe.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header__footer">
+        <h5 class="header__footer-title">Select Mode</h5>
+        <div class="header__footer-btns">
+          <div class="header__footer-btn">
+            <button class="custom-btn" type="button" onclick="showSinglePlayer()">
+              Single Player
+            </button>
+          </div>
+          <div class="header__footer-btn">
+            <button class="custom-btn" type="button" onclick="showPlayWithFriend()">
+              Play With A Friend
+            </button>
+          </div>
+        </div>
+        <a class="text-decoration-none text-black" href="https://t.me/abdurhamonMirmaxsudov">By Abdurahmon</a>
+      </div>
     </div>
-  </body>
-  <script src="./index.js"></script>
-  <script src="./js/timer.js"></script>
-  <script src="./js/connections.js"></script>
+  </div>
+</body>
+<script src="./index.js"></script>
+<script src="./js/timer.js"></script>
+<script src="./js/connections.js"></script>
+
 </html>
