--- a/pages/playingWithFriend.html
+++ b/pages/playingWithFriend.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/playingWithComp.css" />
+    <link rel="stylesheet" href="../styles/playingWithFriend.css" />
     <link rel="stylesheet" href="../styles/connections.css" />
     <title>Playing With Computer</title>
 </head>
@@ -58,8 +59,8 @@
                 </div>
                 <div class="header__body-content">
                     <div class="header__body-content-top">
-                        <h5 class="header__body-title">You - X</h5>
-                        <h5 class="header__body-title">Computer - O</h5>
+                        <h5 class="header__body-title">Player 1 - X</h5>
+                        <h5 class="header__body-title">Player 2 - O</h5>
                     </div>
                     <div
                         class="header__body-content-body d-flex justify-content-between align-items-center flex-column">
@@ -67,7 +68,8 @@
                             <img src="../images/Illustrationsleft.svg"
                                 class="header__body-content-body-img header__body-content-body-img1" alt="img" />
                             <img src="../images/Illustrationsright.svg"
-                                class="header__body-content-body-img header__body-content-body-img2" alt="img" />
+                                class="header__body-content-body-img header__body-content-body-img2 opacity-50"
+                                alt="img" />
                         </div>
                         <div class="tic-tac-toe-wrapper">
                             <div class="tic-tac-toe">
@@ -117,6 +119,6 @@
 <script src="../index.js"></script>
 <script src="../js/timer.js"></script>
 <script src="../js/connections.js"></script>
-<script src="../js/playingWithAi.js"></script>
+<script src="../js/playingWithFriend.js"></script>
 
 </html>
